# advent-of-code-2020

./: CMakeLists.txt  LICENSE
data/: day-05  day-07
src/: day-01.c  day-02.c  day-03.c  day-04.c  day-05.c  day-06.c  day-07.js  day-07.obs.js  day-08.c  day-09.c  day-10.c
